--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang='en')
         meta(name='description' content='')
         meta(name='author' content='')
 
-        title Stylish Portfolio - Start Bootstrap Template
+        title Enoch Kim Portfolio - Start Bootstrap Template
 
         // Favicon
         link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
@@ -48,7 +48,7 @@ html(lang='en')
         // Header
         header.masthead.d-flex.align-items-center
             .container.px-4.px-lg-5.text-center
-                h1.mb-1 Stylish Portfolio
+                h1.mb-1 Enoch Kim
                 h3.mb-5
                     em A Free Bootstrap Theme by Start Bootstrap
                 a.btn.btn-primary.btn-xl(href='#about') Find Out More
